working on deploying app

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,3 +27,11 @@ body{
   font-size: 12px;
 }
 
+.instruction{
+  padding-top: 1.8em;
+  padding-left: 3em;
+}
+
+.instruction p{
+  padding-top: .5em;
+}
